feat: implement hand-written TypeScript parser and platform abstraction
Parser Implementation (NO ANTLR - simpler & better!):
- Hand-written TypeScript parser for SIGL natural language syntax
- Support DRAW, LOAD EXTENSION, ADD ENVIRONMENT, UPDATE, EXPORT commands
- Entity types: MAN, WOMAN, BOY, GIRL, BABY, ANIMAL DOG/CAT/etc
- Attribute parsing: WITH AGE 30 AND BLUE SHIRT
- Parameterized attributes: HAIR(COLOR: BROWN, STYLE: SHORT)
- Positioning: AT LEFT, NEXT TO, BEHIND, GRID positions
- Negated attributes: WITHOUT SHIRT, NO PANTS, BARE TORSO

Extensions:
- Educational extension with TEACHER, STUDENT, PROFESSOR entities
- Hospital extension with DOCTOR, NURSE, PATIENT, SURGEON entities
- 7 educational environments (classroom, library, lab, etc.)
- 7 hospital environments (examination room, OR, ER, etc.)

Platform Abstraction:
- Works in BOTH browser and Node.js (terminal/CLI)
- Platform canvas factory auto-detects environment
- Browser: uses HTMLCanvasElement
- Node.js: uses node-canvas (optional dependency)
- CLI tool for terminal image generation

Tests:
- 52 comprehensive tests for parser
- 41 passing, 11 minor failures to fix
- Test coverage for all major features

Benefits of hand-written parser:
- No ANTLR dependency or build step
- Better error messages with context
- Easier to maintain and extend
- Native TypeScript with perfect type safety
- Faster parsing for line-based syntax

--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:coverage": "vitest --coverage",
+    "test:watch": "vitest",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,json}",
     "type-check": "tsc --noEmit",
-    "antlr:generate": "npx antlr4 -Dlanguage=TypeScript -visitor -no-listener src/parser/grammar/SIGL.g4 -o src/parser/generated",
     "clean": "rm -rf dist node_modules/.vite",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate": "node -r esbuild-register src/cli/generate.ts"
+  },
+  "bin": {
+    "sigl": "./dist/cli/generate.js",
+    "sigl-generate": "./dist/cli/generate.js"
   },
   "keywords": [
     "sigl",
@@ -34,12 +39,13 @@
   "license": "MIT",
   "dependencies": {
     "ajv": "^8.12.0",
-    "antlr4": "^4.13.0",
-    "antlr4ts": "^0.5.0-alpha.4",
     "chroma-js": "^2.4.2",
     "fabric": "^5.3.0",
     "lodash": "^4.17.21",
     "uuid": "^9.0.1"
+  },
+  "optionalDependencies": {
+    "canvas": "^2.11.2"
   },
   "devDependencies": {
     "@types/chroma-js": "^3.1.1",
@@ -49,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "esbuild-register": "^3.5.0",
     "eslint": "^8.52.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.0",
