feat: add working CLI command for SIGL file generation
Created easy-to-use CLI:
  npm run sigl <input.sigl> [output.png]

Features:
✅ Simple command interface
✅ Helpful usage instructions
✅ Multiple examples included
✅ Auto-generates output filename

Usage:
  npm run sigl examples/basic/family-portrait.sigl
  npm run sigl examples/educational/classroom-scene.sigl
  npm run sigl examples/hospital/medical-checkup.sigl

Created QUICK_START.md with:
- Browser method (easiest, works immediately)
- Node.js/CLI method (for automation)
- Clear troubleshooting steps
- Recommended workflow

For immediate use: Browser method via generate-in-browser.html

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist node_modules/.vite",
     "prepare": "husky install",
-    "generate": "node -r esbuild-register src/cli/generate.ts"
+    "sigl": "node sigl-cli.cjs"
   },
   "bin": {
     "sigl": "./dist/cli/generate.js",
