--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chroma-js": "^2.4.2",
     "fabric": "^5.3.0",
     "lodash": "^4.17.21",
+    "three": "^0.160.0",
     "uuid": "^9.0.1"
   },
   "optionalDependencies": {
@@ -51,6 +52,7 @@
     "@types/chroma-js": "^3.1.1",
     "@types/lodash": "^4.14.200",
     "@types/node": "^22.0.0",
+    "@types/three": "^0.160.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
