feat: add extensible entity system and realistic 3D rendering
- Add comprehensive entity builder library (39+ entity types)
- Implement HumanBuilder with realistic features (eyes, nose, mouth, ears, hands)
- Add ObjectBuilder for 14+ object types (furniture, buildings, vehicles)
- Add AnimalBuilder for 14+ animal types
- Implement EntityRegistry for centralized entity management
- Fix WebGL canvas rendering and position resolution
- Add implementation status tracking document
- Organize documentation in docs/ folder
- Update README and changelog with new features

--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,11 @@ src/parser/generated/
 # Test outputs
 test-results/
 playwright-report/
+.playwright-mcp/
 
 # Temporary files
 tmp/
 temp/
+
+# Archive (old files - not needed in React-only architecture)
+.archive/
