--- a/package.json
+++ b/package.json
@@ -19,12 +19,7 @@
     "format": "prettier --write src/**/*.{ts,tsx,json}",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist node_modules/.vite",
-    "prepare": "husky install",
-    "sigl": "node sigl-cli.cjs"
-  },
-  "bin": {
-    "sigl": "./dist/cli/generate.js",
-    "sigl-generate": "./dist/cli/generate.js"
+    "prepare": "husky install"
   },
   "keywords": [
     "sigl",
@@ -38,31 +33,28 @@
   "author": "SIGL Team",
   "license": "MIT",
   "dependencies": {
-    "ajv": "^8.12.0",
-    "chroma-js": "^2.4.2",
-    "fabric": "^5.3.0",
-    "lodash": "^4.17.21",
-    "three": "^0.160.0",
-    "uuid": "^9.0.1"
-  },
-  "optionalDependencies": {
-    "canvas": "^2.11.2"
+    "chroma-js": "^3.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
-    "@types/chroma-js": "^3.1.1",
-    "@types/lodash": "^4.14.200",
+    "@playwright/test": "^1.56.0",
+    "@types/chroma-js": "^2.4.4",
     "@types/node": "^22.0.0",
-    "@types/three": "^0.160.0",
-    "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/three": "^0.180.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "esbuild-register": "^3.5.0",
-    "eslint": "^8.52.0",
-    "husky": "^8.0.3",
+    "eslint": "^9.0.0",
+    "husky": "^9.0.0",
     "lint-staged": "^15.0.0",
+    "playwright": "^1.56.0",
     "prettier": "^3.0.0",
-    "typescript": "^5.2.0",
+    "typescript": "^5.6.0",
     "vite": "^7.1.10",
     "vitest": "^3.2.4"
   },
