--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "chroma-js": "^3.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.4",
     "three": "^0.180.0"
   },
   "devDependencies": {
