--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "structured-language"
   ],
   "author": "SIGL Team",
-  "license": "MIT",
+  "license": "Elastic-2.0",
   "dependencies": {
     "chroma-js": "^3.1.2",
     "react": "^19.0.0",
